<resources>
    <string name="app_name">Firefds Kit [Pie]</string>
    <string name="signal_icons">Signal icons</string>
    <string name="samsung_rom_warning">Samsung ROM required</string>
    <string name="samsung_rom_warning_msg">Your ROM doesn\'t seem to be a Samsung ROM\nThis application doesn\'t support CM or AOSP ROMs.</string>
    <string name="disable_loud_volume_enabled">Loud volume warning is enabled</string>
    <string name="disable_loud_volume_disabled">Loud volume warning is disabled (listening at loud volumes may damage your ears, use caution)</string>
    <string name="disable_loud_volume">Disable loud volume warning</string>
    <string name="statusbar">Notifications panel</string>
    <string name="system">System</string>
    <string name="quick_setting_columns_summary">Number of quick setting tiles per row\nNote: These settings also apply to landscape mode!</string>
    <string name="quick_setting_columns">Quick settings tiles</string>
    <string name="reboot">Restart</string>
    <string name="cancel">Cancel</string>
    <string name="reboot_options">Restart Menu</string>
    <string name="reboot_recovery">Recovery</string>
    <string name="reboot_hotboot">Soft Reboot</string>
    <string name="reboot_download">Download</string>
    <string name="quick_settings">Quick settings</string>
    <string name="collapse_panel_after_toggle">Collapse panel after toggle</string>
    <string name="notification_panel_closes_after_toggle_press">Notification panel closes after toggle press</string>
    <string name="notification_panels_stays_open_after_toggle_press">Notification panel stays open after toggle press</string>
    <string name="hide">Hide</string>
    <string name="sound">Sound</string>
    <string name="clock">Clock</string>
    <string name="security">Security hacks</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="messaging">Messaging</string>
    <string name="apply">Apply</string>
    <string name="long_press_skip_summary">Skip to the next/previous track with a long press on the volume keys (only when the screen is off, also works with headset controls)</string>
    <string name="long_press_skip">Skip tracks with volume keys</string>
    <string name="mms_sms_mms_conversion_on">Conversion disabled</string>
    <string name="mms_sms_mms_conversion_off">Current conversion threshold: 4 (default)</string>
    <string name="mms_sms_mms_conversion">Disable SMS to MMS threshold</string>
    <string name="soft_reboot">Fast reboot</string>
    <string name="reboot_required">Please reboot to apply changes.</string>
    <string name="reboot_required_title">Reboot requested</string>
    <string name="reboot_required_message">Firefds Kit requires a reboot to apply changes</string>
    <string name="rebooting">Rebooting now…</string>
    <string name="credit_details">"\nThanks to Rovo89 for creating Xposed framework.\n\nThanks to C3C076, Romracer, Tungstwenty… for their contribution on Xposed framework and modules.\n\nDeveloper: <a href="http://forum.xda-developers.com/member.php?u=3562083">Wanam @Xda-Developers</a>\n\nTwitter: <a href="https://twitter.com/wanamxda">Mohamed Karami</a>\n\nModed for Galaxy S8 framework by: <a href="http://forum.xda-developers.com/member.php?u=3844620">Firefds firefds@Xda-Developers</a>"</string>
    <string name="restore">Restore a backup</string>
    <string name="save">Save a backup</string>
    <string name="restoring_backup">Restoring backup</string>
    <string name="backup_name">Backup name</string>
    <string name="save_successful">Save successful</string>
    <string name="save_unsuccessful">Save unsuccessful</string>
    <string name="delete">Delete</string>
    <string name="no_backups">No backups</string>
    <string name="enable_long_back_kills_app">Long BACK kills app</string>
    <string name="enable_long_back_kills_app_off">Default long BACK behavior</string>
    <string name="enable_long_back_kills_app_on">Holding BACK kills foreground app (overrides multi window show/hide)</string>
    <string name="defaults_restored">Defaults restored</string>
    <string name="defaults">Default stock</string>
    <string name="backup_restored">Backup restored</string>
    <string name="bypass_exchange_security">Bypass exchange security</string>
    <string name="bypass_exchange_security_on">Exchange lock security disabled (You must setup your account after reboot)</string>
    <string name="bypass_exchange_security_off">Exchange lock security enabled</string>
    <string name="email">Email</string>
    <string name="enable_call_add">Enable Add call button</string>
    <string name="enable_call_add_on">Add call button enabled instead of Record button</string>
    <string name="enable_call_add_off">Call Record button enabled instead of Add call button</string>
    <string name="disable_call_ring_increasing">Disable increasing call ringer</string>
    <string name="disable_call_ring_increasing_on">Increasing call ringer disabled</string>
    <string name="disable_call_ring_increasing_off">Increasing call ringer enabled</string>
    <string name="long_back_app_white_liste">Long BACK app white list</string>
    <string name="long_back_app_white_liste_sumary">Exclude apps from being killed on long BACK press</string>
    <string name="buttons">Buttons</string>
    <string name="phone">Phone</string>
    <string name="multi_window">Multi window</string>
    <string name="select_multi_window_apps">Select multi window apps</string>
    <string name="select_multi_window_apps_summary">Choose apps to include in multi window and popup mode</string>
    <string name="auto_expand_volume_panel">Auto expand volume panel</string>
    <string name="auto_expand_volume_panel_sum">Expand volume panel automatically on volume change</string>
    <string name="root_info">Root access NOT granted!\n\nSome features requires Root access to work properly.</string>
    <string name="ok_btn">OK</string>
    <string name="no_terminate_button_on_the_browser_menu">No Exit button on the browser menu</string>
    <string name="terminate_button_added_to_the_browser_menu">Exit button added to the browser menu</string>
    <string name="add_terminate_button_to_the_browser">Add Exit button to browser menu</string>
    <string name="call_number_formatting_enabled">Call number formatting enabled</string>
    <string name="call_number_formatting_disabled">Call number formatting disabled</string>
    <string name="disable_call_number_formatting">Disable call number formatting</string>
    <string name="call_button_hidden_on_call_logs">Call button hidden on call logs</string>
    <string name="call_button_enabled_on_call_logs">Call button enabled on call logs</string>
    <string name="enable_call_button_on_call_logs">Enable call button on call logs</string>
    <string name="status_custom">Status set to Custom</string>
    <string name="status_official">Status set to Official</string>
    <string name="fake_system_status">Fake system status</string>
    <string name="enable_automatic_input_mode">Enable input mode menu</string>
    <string name="automatic_input_mode_enabled">Input mode menu enabled</string>
    <string name="automatic_input_mode_disabled">Input mode menu disabled</string>
    <string name="disable_camera_shutter_sound">Disable camera shutter sound</string>
    <string name="call_recording_menu_disabled">Call recording menu disabled</string>
    <string name="call_recording_menu_enabled">Call recording menu enabled</string>
    <string name="enable_call_recording_menu">Enable call recording menu</string>
    <string name="quick_settings_disable_bluetooth_scan_dialog">Disable bluetooth toggle popup</string>
    <string name="quick_settings_disable_bluetooth_scan_dialog_sum">Disable the scan dialog after enabling bluetooth</string>
    <string name="quick_settings_disable_sync_dialog">Disable sync toggle popup</string>
    <string name="quick_settings_disable_sync_dialog_sum">Disable the confirmation dialog when toggling sync</string>
    <string name="camera_and_gallery">Camera and Gallery</string>
    <string name="nfc_behavior_summary">NFC should listen:\n%s</string>
    <string name="nfc_behavior">NFC Behavior</string>
    <string name="status_icons">Status icons</string>
    <string name="hide_nfc_icon_off">NFC icon is shown</string>
    <string name="hide_nfc_icon_on">NFC icon is hidden</string>
    <string name="hide_nfc_icon">Hide NFC icon</string>
    <string name="disable_temperature_checks">Disable Temperature checks</string>
    <string name="auto_call_recording">Auto call recording</string>
    <string name="enable_automatic_call_recording">Enable automatic call recording</string>
    <string name="screenshot">Screenshot</string>
    <string name="add_screenshot_to_power_menu">Add Screenshot to power menu</string>
    <string name="advanced_power_menu_title">Advanced Power Menu</string>
    <string name="advanced_power_menu">Power menu</string>
    <string name="carrier_notification">Carrier</string>
    <string name="hide_carrier_label">Hide carrier label</string>
    <string name="hide_carrier_label_shown">Carrier label shown</string>
    <string name="hide_carrier_label_hidden">Carrier label hidden</string>
    <string name="carrier_size_summary">Set the status bar carrier text size</string>
    <string name="carrier_size">Carrier label size</string>
    <string name="hide_mtp_notification">Auto MTP</string>
    <string name="hide_mtp_notification_off">Manually allow or deny MTP access</string>
    <string name="hide_mtp_notification_on">Auto allows MTP and hides the notification</string>
    <string name="screen_timeout_title">Screen Timeout Settings</string>
    <string name="screen_timeout_seconds_summary">Set the screen timeout seconds</string>
    <string name="screen_timeout_seconds">Screen Timeout Seconds</string>
    <string name="screen_timeout_minutes_summary">Set the screen timeout minutes</string>
    <string name="screen_timeout_minutes">Screen Timeout Minutes</string>
    <string name="screen_timeout_hours_summary">Set the screen timeout hours</string>
    <string name="screen_timeout_hours">Screen Timeout Hours</string>
    <string name="enable_camera_shutter_menu">Enable Shutter Sound Menu</string>
    <string name="enable_camera_shutter_menu_summary">Enable shutter sound menu in camera app</string>
    <string name="data_icon_behavior_summary">Select data icon symbol</string>
    <string name="data_icon_behavior_title">Data Icon Symbol</string>
    <string name="enable_data_mode_switch_summary">Enable data mode switch in power menu</string>
    <string name="enable_data_mode_switch_title">Data Mode Switch</string>
    <string name="quick_settings_data_usage_view_summary">Show data usage view in quick panel</string>
    <string name="quick_settings_data_usage_view_title">Data Usage View</string>
    <string name="network_speed_summary">Show network speed in status bar menu option</string>
    <string name="network_speed_title">Network Speed Menu</string>
    <string name="advanced_power_menu_summary">Adds additional options to power menu</string>
    <string name="status_bar_double_tap_summary">Enable statusbar double tap to sleep</string>
    <string name="status_bar_double_tap_title">Double Tap To Sleep</string>
    <string name="disable_high_level_brightness_summary">Disable high level brightness popup</string>
    <string name="disable_high_level_brightness_title">High Level Brightness</string>
    <string name="disable_signature_check_title">Signature Check</string>
    <string name="disable_flag_secure_title">Secure Flag</string>
    <string name="disable_signature_check_on">Signature check enabled</string>
    <string name="disable_signature_check_off">Signature check disabled</string>
    <string name="disable_flag_secure_on">Secure flag enabled</string>
    <string name="disable_flag_secure_off">Secure flag disabled</string>
</resources>