<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/email">
        <SwitchPreference
            android:defaultValue="false"
            android:key="disableExchangeLockSecurity"
            android:summaryOff="@string/bypass_exchange_security_off"
            android:summaryOn="@string/bypass_exchange_security_on"
            android:title="@string/bypass_exchange_security" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/system">
        <SwitchPreference
            android:defaultValue="true"
            android:key="makeMeTooLegit"
            android:summaryOff="@string/status_custom"
            android:summaryOn="@string/status_official"
            android:title="@string/fake_system_status" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="disableSignatureCheck"
            android:summaryOff="@string/disable_signature_check_on"
            android:summaryOn="@string/disable_signature_check_off"
            android:title="@string/disable_signature_check_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="disableFlagSecure"
            android:summaryOff="@string/disable_flag_secure_on"
            android:summaryOn="@string/disable_flag_secure_off"
            android:title="@string/disable_flag_secure_title" />
    </PreferenceCategory>
</PreferenceScreen>