<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="prefsRoot">

    <androidx.preference.Preference
        android:enabled="true"
        android:key="fkHeader"
        android:selectable="false"
        android:title="example_title"
        app:iconSpaceReserved="false" />

    <androidx.preference.PreferenceScreen
        android:icon="@drawable/notification"
        android:key="statusbarKey"
        android:title="@string/statusbar"
        app:fragment="sb.firefds.pie.firefdskit.FirefdsKitActivity$NotificationSettingsFragment" />
    <androidx.preference.PreferenceScreen
        android:icon="@drawable/lockscreen"
        android:key="lockscreenKey"
        android:title="@string/lockscreen"
        app:fragment="sb.firefds.pie.firefdskit.FirefdsKitActivity$LockscreenSettingsFragment" />
    <androidx.preference.PreferenceScreen
        android:icon="@drawable/sound"
        android:key="soundKey"
        android:title="@string/sound"
        app:fragment="sb.firefds.pie.firefdskit.FirefdsKitActivity$SoundSettingsFragment" />
    <androidx.preference.PreferenceScreen
        android:icon="@drawable/system"
        android:key="systemKey"
        android:title="@string/system"
        app:fragment="sb.firefds.pie.firefdskit.FirefdsKitActivity$SystemSettingsFragment" />
    <androidx.preference.PreferenceScreen
        android:icon="@drawable/phone"
        android:key="phoneKey"
        android:title="@string/phone"
        app:fragment="sb.firefds.pie.firefdskit.FirefdsKitActivity$PhoneSettingsFragment" />
    <androidx.preference.PreferenceScreen
        android:icon="@drawable/sms"
        android:key="messagingKey"
        android:title="@string/messaging"
        app:fragment="sb.firefds.pie.firefdskit.FirefdsKitActivity$MessagingSettingsFragment" />
    <androidx.preference.PreferenceScreen
        android:icon="@drawable/security"
        android:key="securityHacks"
        android:title="@string/security"
        app:fragment="sb.firefds.pie.firefdskit.FirefdsKitActivity$SecuritySettingsFragment" />
</androidx.preference.PreferenceScreen>