<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_menu_notification"
        android:shortcutId="statusbarShortcut"
        android:shortcutLongLabel="@string/statusbar"
        android:shortcutShortLabel="@string/statusbar">
        <intent
            android:action="STATUSBAR"
            android:targetClass="sb.firefds.pie.firefdskit.FirefdsKitActivity"
            android:targetPackage="sb.firefds.pie.firefdskit" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_menu_system"
        android:shortcutId="systemShortcut"
        android:shortcutLongLabel="@string/system"
        android:shortcutShortLabel="@string/system">
        <intent
            android:action="SYSTEM"
            android:targetClass="sb.firefds.pie.firefdskit.FirefdsKitActivity"
            android:targetPackage="sb.firefds.pie.firefdskit" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_menu_phone"
        android:shortcutId="phoneShortcut"
        android:shortcutLongLabel="@string/phone"
        android:shortcutShortLabel="@string/phone">
        <intent
            android:action="PHONE"
            android:targetClass="sb.firefds.pie.firefdskit.FirefdsKitActivity"
            android:targetPackage="sb.firefds.pie.firefdskit" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_menu_security"
        android:shortcutId="securityShortcut"
        android:shortcutLongLabel="@string/security"
        android:shortcutShortLabel="@string/security">
        <intent
            android:action="SECURITY"
            android:targetClass="sb.firefds.pie.firefdskit.FirefdsKitActivity"
            android:targetPackage="sb.firefds.pie.firefdskit" />
    </shortcut>
</shortcuts>